# koreo-core

./: README.md  pyproject.toml
.github/workflows/: build-and-test.yaml  ci.yaml
crd/: dummy.yaml  function-test.yaml  function.yaml  function_test.yaml  resource-function.yaml  resource-template.yaml  resource_function.yaml  sample-function.koreo  sample-function.yaml  sample-resource-functions.koreo  sample-resource-template.yaml  sample-value-functions.koreo  sample-value-functoins.koreo  sample-workflow.koreo  sample-workflow.yaml  value-function.yaml  value_function.yaml  workflow.yaml
docs/: function-test.md  glossary.md  resource-function.md  resource-template.md  value-funciton.md  workflow.md
examples/: compare-directives.koreo  dummy-crds.yaml  k8s-sa.koreo  patch-loop-testing.koreo  resource-functions.koreo  resource-templates.koreo  value-functions.koreo  workflows.koreo
koreo/: __init__.py  flow.py
koreo/function/: prepare.py  structure.py
koreo/template/: template_cel_functions.py
src/: env.py  koreo_controller.py
src/controller/: custom_workflow.py  koreo_cache.py
src/koreo/: __init__.py  cache.py  cel_functions.py  flow.py  predicate_helpers.py  ref_helpers.py  registry.py  result.py  schema.py  workflow.py
src/koreo/cel/: encoder.py  evaluation.py  functions.py  prepare.py  structure_extractor.py
src/koreo/function/: prepare.py  reconcile.py  registry.py  structure.py
src/koreo/function_test/: prepare.py  registry.py  run.py  structure.py
src/koreo/resource_function/: prepare.py  reconcile.py  structure.py
src/koreo/resource_template/: prepare.py  registry.py  structure.py
src/koreo/template/: __init__.py  template.py
src/koreo/value_function/: prepare.py  reconcile.py  (+1 more)
tests/: test_flow.py  test_result.py
tests/function/: test_function.py  test_reconcile.py
tests/koreo/: test_cache.py
tests/template/: test_template.py  test_template_cel_functions.py
(+25 files in other folders)
